@@ -212,6 +212,9 @@ Bug Fixes
   now throws an exception instead of exhausting CPU/RAM.  (Nik
   Everett via Mike McCandless)
 
+* LUCENE-6054: Allow repeating the empty automaton (Nik Everett via
+  Mike McCandless)
+
 Documentation
 
 * LUCENE-5392: Add/improve analysis package documentation to reflect
